Fix some layout bugs

--- a/src/styles/components/Home.scss
+++ b/src/styles/components/Home.scss
@@ -48,7 +48,7 @@
             &__image__container::after {
                 content: '';
                 background-color: rgb(45, 45, 45);
-                height: 30px;
+                height:10px;
                 width: 100%;
                 position: absolute;
                 // z-index: 0;
